syntax = "proto3";

package proto;

/*
 * Hedera Network Services Protobuf
 *
 * Copyright (C) 2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hedera.hashgraph.sdk.proto";
// <<<pbj.java_package = "com.hedera.hapi.node.addressbook">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "basic_types.proto";

/**
 * Modify the attribute of a node. If a field is not set in the transaction body, the
 * corresponding node attribute will be unchanged.
 * For phase 2, this marks node to be updated in the merkle tree and will be used to write config.txt and
 * a-pulbic-NodeAlias.pem file per each node during prepare freeze.
 * The node will not be updated until the network is upgraded.
 * Original node account ID has to sign the transaction.
 */
message NodeUpdateTransactionBody {

    /**
     * The unique id of the Node to be updated. This must refer to an existing, non-deleted node.
     */
    uint64 node_id = 1;

    /**
     * If set, the new node account_id.
     */
    AccountID account_id = 2;

    /**
     * If set, the new description to be associated with the node.
     */
    google.protobuf.StringValue description = 3;

    /**
     * If set, the new ip address and port.
     */
    repeated ServiceEndpoint gossip_endpoint = 4;

    /**
     * If set, replace the current list of service_endpoints.
     */
    repeated ServiceEndpoint service_endpoint = 5;

    /**
     * If set, the new X509 certificate of the gossip node.
     */
    google.protobuf.BytesValue gossip_ca_certificate = 6;

    /**
     * If set, the new grpc x509 certificate hash.
     */
    google.protobuf.BytesValue grpc_certificate_hash = 7;
}