syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.service.proto.java";

import "Query.proto";
import "Response.proto";
import "TransactionResponse.proto";
import "Transaction.proto";


service FileService {
    rpc createFile (Transaction) returns (TransactionResponse);

    rpc updateFile (Transaction) returns (TransactionResponse);

    rpc deleteFile (Transaction) returns (TransactionResponse);

    rpc appendContent (Transaction) returns (TransactionResponse);

    rpc getFileContent (Query) returns (Response);

    rpc getFileInfo (Query) returns (Response);
}